# beatshift

./: .gitignore  AI_REFLECTION.md  LICENSE  README.md  Requirements.md  SystemModelling.md  pyproject.toml
src/beatshift/: __init__.py  cli.py  musicbrainz.py  organizer.py  scanner.py  stats.py  tagger.py
tests/: test_organizer.py  test_scanner.py  test_stats.py  test_tagger.py
