[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beatshift"
version = "1.0.0"
description = "A CLI tool for scanning, tagging, and organising local music collections."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "mutagen>=1.47",
    "musicbrainzngs>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
beatshift = "beatshift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
